OO-984: reduce number of queries in repository details and runtime, optimize contact list for chat